[package]
name = "sensorflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytes = "1.2.1"
tokio-serial = "5.4.1"
tokio = {version="1.21.2", features = ["full"]}
serialport = "4.2.0"
thiserror = "1.0.37"
