[package]
name = "sensorflow"
version = "0.1.0"
authors = ["Martin Claus"]
description = "Simple tool to read from IO devices and outputs to various formats."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytes = "1.2.1"
tokio-serial = "5.4.1"
tokio = {version="1.21.2", features = ["full"]}
serialport = "4.2.0"
thiserror = "1.0.37"
clap = { version = "4.0.23", features = ["derive"] }
async-trait = "0.1.58"
chrono = "0.4.23"
